--- a/back-end-app/pom.xml
+++ b/back-end-app/pom.xml
@@ -5,8 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.class-descriptor</groupId>
-    <artifactId>back-end-app</artifactId>
+    <artifactId>ClaroTest</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
